# dungeon

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.zig  build.zig.zon  flake.nix  fly.toml
.github/workflows/: fly-deploy.yml
assets/: block.aseprite  player.aseprite
src/: Block.zig  Bullet.zig  Camera.zig  Player.zig  client.rs  client_main.rs  constants.rs  game.rs  game_state.rs  lib.rs  main.rs  main.zig  server.rs  server_main.rs  utils.rs  utils.zig
src/entities/: boss.rs  bullet.rs  effects.rs  mod.rs  player.rs
src/systems/: audio.rs  collision.rs  input.rs  mod.rs  network.rs  render.rs
