[package]
name = "dungeon"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dungeon-client"
path = "src/client_main.rs"

[[bin]]
name = "dungeon-server"
path = "src/server_main.rs"

[dependencies]
anyhow = "1.0"
argh = "0.1"
macroquad = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
