[package]
name = "dungeon"
version = "0.1.0"
edition = "2024"

[features]
default = ["client"]
client = ["macroquad"]

[[bin]]
name = "client"
path = "src/client.rs"
required-features = ["client"]

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
anyhow = "1.0"
argh = "0.1"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
macroquad = { version = "0.4", optional = true }

[profile.release]
lto = true
opt-level = 3
